2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (Util::filename_to_utf8_fallback): New
	wrapper function for Glib::filename_to_utf8() that works even if
	the user hasn't set G_BROKEN_FILENAMES correctly.  In that case
	it shows a hopefully annoying g_warning().

	* src/filelist.cc: Use Util::filename_to_utf8_fallback() where
	appropriate.
	* src/mainwindow.cc: ditto.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.cc: Speed up find_files() by updating the GUI
	every 16 iterations rather than all the time.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h} src/filelist.{cc,h}: Implement "Save" and
	"Save all" functionality.  Also, separate the file list boundary
	notification from signal_switch_buffer() -- should be a lot more
	robust now.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h} src/filelist.{cc,h}: Add "Save all" tool
	button and implement sensitivity setting for "Save" and "Save all".

2002-10-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/stock_save_all_24.png: New file.
	* pixmaps/Makefile.am: Use gdk-pixbuf-csource to generate inline
	stock pixbufs.
	* configure.ac: Check for gdk-pixbuf-csource.
	* src/main.cc: Register new stock items for regexxer.

2002-10-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h}: Paint rows of modified files in red.

2002-10-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: Make the TextView non-editable if no file
	is loaded.

2002-10-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Require sigc++ >= 1.2.1 and gtkmm >= 1.3.27.

2002-10-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.{cc,h} src/filelist.{cc,h} src/mainwindow.{cc,h}:
	Implement match substitution for the current file and all files,
	and get notification on match count changes working correctly.

2002-10-16  Daniel Elstner  <daniel.elstner@gmx.net>
